Fixed layout issues with NC 14

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 /* Navigation: folder like structure */
+#app {
+        width: 100%;
+}
+#app-leftpane {
+        width: 20%;
+        float: left;
+}
 #app-mailbox-peers {
-	width: 20%;
+	width: 100%;
 	height: 100%;
-	float: left;
 	box-sizing: border-box;
 	padding-bottom: 44px;
 	border-left: 1px solid #ddd;
@@ -229,7 +235,7 @@
 }
 
 #app-settings {
-	width: 20%;
+	width: 100%;
 }
 
 #app-settings-header, #app-settings-content {
